# Custom-CNC-Controller

./: README.md  pyproject.toml
config/: laser_materials.json  machines.json  materials.json
deploy/xu4/: cnc-controller-web-sync.service  cnc-controller-web-sync.timer
docs/: RAYFORGE_INTEGRATION.md  ROADMAP.md
scripts/: cnc-git-sync  xu4-web-sync
src/cnc_controller/: __init__.py  gcode.py  gerber.py  grbl.py  grbl_worker.py  hardware.py  history.py  jobs.py  laser.py  launchers.py  materials.py  mock_serial.py  models.py  network.py  pcb.py  profiles.py  safety.py  tools.py  update_status.py  workflows.py
src/cnc_controller/laser/: __init__.py  domain.py  importer.py  materials.py  rayforge_adapter.py  safety.py  service.py
src/cnc_controller/ui/: app.py  motion.py  qt_compat.py  theme.py
src/cnc_controller/ui/screens/: cnc_mode.py  diagnostics.py  file_browser.py  home.py  laser_mode.py  materials.py  pcb_wizard.py  probing.py  safety_review.py  settings.py  splash.py  tools.py
src/cnc_controller/ui/widgets/: action_rail.py  status_bar.py  touch_keyboard.py
tests/: test_diagnostics.py  test_file_browser.py  test_gcode.py  test_grbl.py  test_jobs_materials_hardware.py  test_laser_workflow.py  test_launchers.py  test_motion.py  test_network.py  test_pcb.py  test_pcb_screen.py  test_probing.py  test_safety.py  test_tool_material_db.py  test_update_status.py
web/CNC-Controller_Test/: README.md  app.js  index.html  styles.css
