[project]
name = "custom-cnc-controller"
version = "0.2.0"
description = "Touchscreen CNC and laser controller shell for GRBL machines."
requires-python = ">=3.10"
dependencies = [
  "pyserial>=3.5",
]

[project.optional-dependencies]
test = ["pytest>=8"]
cnc = ["bCNC"]
# On ARM Linux, install python3-pyqt5 via apt instead
ui = ["PySide6>=6.5"]

[project.scripts]
cnc-controller = "cnc_controller.ui.app:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
